syntax = "proto3";
package pbkit.wrp;

message WrpMessage {
  oneof message {
    WrpHostMessage_Initialize Host_Initialize = 1;
    WrpHostMessage_Error Host_Error = 2;
    WrpHostMessage_ResStart Host_ResStart = 3;
    WrpHostMessage_ResPayload Host_ResPayload = 4;
    WrpHostMessage_ResFinish Host_ResFinish = 5;
    WrpGuestMessage_ReqStart Guest_ReqStart = 6;
    WrpGuestMessage_ReqPayload Guest_ReqPayload = 7;
    WrpGuestMessage_ReqFinish Guest_ReqFinish = 8;
    WrpGuestMessage_ResFinish Guest_ResFinish = 9;
  }
}

message WrpHostMessage_Initialize {
  repeated string available_methods = 1;
}
message WrpHostMessage_Error {
  string message = 1;
}
message WrpHostMessage_ResStart {
  string req_id = 1;
  map<string, string> header = 2;
}
message WrpHostMessage_ResPayload {
  string req_id = 1;
  bytes payload = 2;
}
message WrpHostMessage_ResFinish {
  string req_id = 1;
  map<string, string> trailer = 2;
}

message WrpGuestMessage_ReqStart {
  string req_id = 1;
  string method_name = 2;
  map<string, string> metadata = 3;
}
message WrpGuestMessage_ReqPayload {
  string req_id = 1;
  bytes payload = 2;
}
message WrpGuestMessage_ReqFinish {
  string req_id = 1;
}
message WrpGuestMessage_ResFinish {
  string req_id = 1;
}
